[gd_scene load_steps=2 format=3 uid="uid://mutmcwhiv111"]

[ext_resource type="Script" uid="uid://cqw7ddwxnlc70" path="res://scripts/dialogue.gd" id="1_fgkew"]

[node name="dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgkew")

[node name="dialogue_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1080.0
offset_top = -240.0
offset_right = -20.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="dialogue_label" type="RichTextLabel" parent="dialogue_panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1010.0
offset_top = -184.0
offset_right = -50.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 25

[node name="auto_advance_timer" type="Timer" parent="."]
one_shot = true

[node name="timer_panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 570.0
offset_right = 440.0
offset_bottom = 650.0

[node name="timer_label" type="Label" parent="timer_panel"]
z_index = 3
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35

[node name="background_image" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="character_image" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
